--- a/server/starmap/starmap.csproj
+++ b/server/starmap/starmap.csproj
@@ -54,8 +54,15 @@
     <Reference Include="Starcounter.XSON, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PositionController.cs" />
+    <Compile Include="Models\Position.cs" />
+    <Compile Include="Models\TrackingObject.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\map.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
