--- a/servers/starmap/starmap.csproj
+++ b/servers/starmap/starmap.csproj
@@ -55,14 +55,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\PositionController.cs" />
+    <Compile Include="Models\Group.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\TrackingObject.cs" />
+    <Compile Include="Services\Implementations\PositionServiceLoadTest.cs" />
+    <Compile Include="Services\Implementations\PositionService.cs" />
+    <Compile Include="Services\Interfaces\IPositionService.cs" />
     <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="Views\map.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Services\Messages\PositionMsg.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
