--- a/servers/starcounter/starmap/starmap.csproj
+++ b/servers/starcounter/starmap/starmap.csproj
@@ -77,6 +77,11 @@
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
   </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Services\Messages\ActiveUsersMsg.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
